--- a/thai.css
+++ b/thai.css
@@ -7,7 +7,7 @@ body {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    background-color: #fffaf0;
+    background-color: #fbce73;
     color: #4b2e00;
     text-align: center;
     padding: 50px;
